Fixed php error by adding an argument to query_posts. Imagine that. Floated descriptions on projects page to prevent text wrapping images.

--- a/wp-content/themes/boardtown-woodwork-child/style.css
+++ b/wp-content/themes/boardtown-woodwork-child/style.css
@@ -440,12 +440,15 @@ footer {
         float: left;
         clear: none;
         padding: 0 6.25% 6.25% 0;
+        width: 30%;
         max-width: 300px;
     }
 
     .project-1-main-text {
-        margin-top: -20px;
+        margin-top: -27px;
         text-align: left;
+        float: right;
+        width: 70%;
     }
 
     .project-1-main-text h2{
